--- a/package.json
+++ b/package.json
@@ -9,10 +9,14 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@vue/eslint-config-prettier": "^6.0.0",
     "core-js": "^3.6.5",
+    "eslint-plugin-prettier": "^3.1.4",
+    "prettier": "^2.1.2",
     "register-service-worker": "^1.7.1",
     "vue": "^2.6.11",
     "vue-router": "^3.2.0",
+    "vuetify": "^2.2.11",
     "vuex": "^3.4.0"
   },
   "devDependencies": {
@@ -32,7 +36,11 @@
     "eslint-plugin-promise": "^4.2.1",
     "eslint-plugin-standard": "^4.0.0",
     "eslint-plugin-vue": "^6.2.2",
-    "vue-template-compiler": "^2.6.11"
+    "sass": "^1.19.0",
+    "sass-loader": "^8.0.0",
+    "vue-cli-plugin-vuetify": "~2.0.7",
+    "vue-template-compiler": "^2.6.11",
+    "vuetify-loader": "^1.3.0"
   },
   "eslintConfig": {
     "root": true,
@@ -44,9 +52,13 @@
       "@vue/standard"
     ],
     "parserOptions": {
-      "parser": "babel-eslint"
+      "ecmanVersion": "2020"
     },
-    "rules": {},
+    "rules": {
+      "space-before-function-paren": "off",
+      "semi": "off",
+      "comma-dangle": "off"
+    },
     "overrides": [
       {
         "files": [
