--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@vue/eslint-config-prettier": "^6.0.0",
+    "axios": "^0.21.0",
     "core-js": "^3.6.5",
     "eslint-plugin-prettier": "^3.1.4",
     "prettier": "^2.1.2",
@@ -49,7 +50,11 @@
     },
     "extends": [
       "plugin:vue/essential",
-      "@vue/standard"
+      "@vue/standard",
+      "prettier"
+    ],
+    "plugins": [
+      "prettier"
     ],
     "parserOptions": {
       "ecmanVersion": "2020"
