--- a/.env
+++ b/.env
@@ -1,5 +1,4 @@
 online=http://bransa-server.herokuapp.com/
-VUE_APP_BACKEND=https://bransa-server.herokuapp.com
-
+VUE_APP_BACKEND=https://server.bransa.com.br
 
 offline:http://192.168.100.7:3333
