--- a/.env
+++ b/.env
@@ -1,4 +1,5 @@
 online=http://bransa-server.herokuapp.com/
 VUE_APP_BACKEND=https://server.bransa.com.br
+VUE_APP_PORT=8081
 
 offline:http://192.168.100.7:3333
