feat: edit specifications with html

--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
+VUE_APP_BACKEND='https://api-alibaba.vedassistemas.com.br'
+# VUE_APP_BACKEND='http://localhost:3333'
 online=http://bransa-server.herokuapp.com/
-VUE_APP_BACKEND=https://api-alibaba.vedassistemas.com.br
 VUE_APP_PORT=8081
-
-offline:http://192.168.100.7:3333
+OFFLINE='http://localhost:3333'
