--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "register-service-worker": "^1.7.1",
     "vue": "^2.6.11",
     "vue-router": "^3.2.0",
+    "vue2-editor": "^2.10.3",
     "vuetify": "^2.2.11",
     "vuex": "^3.4.0"
   },
